--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   },
   "license": "MIT",
   "dependencies": {
+    "exports-loader": "^0.6.2",
     "history": "~1.13.x",
+    "imports-loader": "^0.6.5",
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
     "react-redux": "^4.0.0",
@@ -17,7 +19,8 @@
     "redux-logger": "^2.3.1",
     "redux-promise": "^0.5.0",
     "redux-simple-router": "1.0.0",
-    "redux-thunk": "^1.0.2"
+    "redux-thunk": "^1.0.2",
+    "whatwg-fetch": "^0.10.1"
   },
   "devDependencies": {
     "babel": "^6.3.13",
@@ -28,6 +31,7 @@
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "babel-preset-stage-0": "^6.3.13",
+    "css-loader": "^0.23.0",
     "eslint": "^1.10.3",
     "eslint-config-airbnb": "0.0.8",
     "eslint-plugin-react": "^3.11.3",
@@ -37,6 +41,7 @@
     "redbox-react": "^1.1.1",
     "redux-devtools": "^3.0.0",
     "redux-devtools-log-monitor": "^1.0.1",
+    "style-loader": "^0.13.0",
     "webpack": "^1.12.1",
     "webpack-dev-middleware": "^1.2.0",
     "webpack-hot-middleware": "^2.4.1"
