--- a/package.json
+++ b/package.json
@@ -28,18 +28,15 @@
     "babel-core": "^6.3.17",
     "babel-eslint": "^4.1.1",
     "babel-loader": "^6.2.0",
-    "babel-plugin-react-transform": "^2.0.0-beta1",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
+    "babel-preset-react-hmre": "^1.0.0",
     "babel-preset-stage-0": "^6.3.13",
     "css-loader": "^0.23.0",
     "eslint": "^1.10.3",
     "eslint-config-airbnb": "0.0.8",
     "eslint-plugin-react": "^3.11.3",
     "express": "^4.13.3",
-    "react-transform-catch-errors": "^1.0.0",
-    "react-transform-hmr": "^1.0.1",
-    "redbox-react": "^1.1.1",
     "redux-devtools": "^3.0.0",
     "redux-devtools-log-monitor": "^1.0.1",
     "style-loader": "^0.13.0",
