--- a/package.json
+++ b/package.json
@@ -10,23 +10,22 @@
   "repo": "https://github.com/neighborhood999/redux-simple-router-example",
   "dependencies": {
     "exports-loader": "^0.6.2",
-    "history": "~1.13.x",
     "imports-loader": "^0.6.5",
-    "react": "^0.14.3",
-    "react-dom": "^0.14.3",
-    "react-redux": "^4.0.0",
-    "react-router": "^1.0.2",
+    "react": "^0.14.7",
+    "react-dom": "^0.14.7",
+    "react-redux": "^4.4.0",
+    "react-router": "^2.0.0",
     "redux": "^3.0.5",
-    "redux-logger": "^2.3.1",
-    "redux-promise": "^0.5.0",
-    "redux-simple-router": "1.0.0",
-    "redux-thunk": "^1.0.2",
-    "whatwg-fetch": "^0.10.1"
+    "redux-logger": "^2.5.2",
+    "redux-promise": "^0.5.1",
+    "react-router-redux": "^3.0.0",
+    "redux-thunk": "^1.0.3",
+    "whatwg-fetch": "^0.11.0"
   },
   "devDependencies": {
     "babel": "^6.3.13",
     "babel-core": "^6.3.17",
-    "babel-eslint": "^4.1.1",
+    "babel-eslint": "^5.0.0",
     "babel-loader": "^6.2.0",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
@@ -34,7 +33,7 @@
     "babel-preset-stage-0": "^6.3.13",
     "css-loader": "^0.23.0",
     "eslint": "^1.10.3",
-    "eslint-config-airbnb": "0.0.8",
+    "eslint-config-airbnb": "5.0.1",
     "eslint-plugin-react": "^3.11.3",
     "express": "^4.13.3",
     "redux-devtools": "^3.0.0",
