--- a/package.json
+++ b/package.json
@@ -9,38 +9,42 @@
   "license": "MIT",
   "repo": "https://github.com/neighborhood999/redux-simple-router-example",
   "dependencies": {
-    "exports-loader": "^0.6.2",
+    "exports-loader": "^0.6.3",
     "imports-loader": "^0.6.5",
-    "react": "^0.14.7",
-    "react-dom": "^0.14.7",
-    "react-redux": "^4.4.0",
-    "react-router": "^2.0.0",
-    "redux": "^3.0.5",
-    "redux-logger": "^2.5.2",
-    "redux-promise": "^0.5.1",
-    "react-router-redux": "^3.0.0",
-    "redux-thunk": "^1.0.3",
-    "whatwg-fetch": "^0.11.0"
+    "node-uuid": "^1.4.7",
+    "react": "^15.1.0",
+    "react-dom": "^15.1.0",
+    "react-redux": "^4.4.5",
+    "react-router": "^2.4.1",
+    "react-router-redux": "^4.0.5",
+    "redux": "^3.5.2",
+    "redux-logger": "^2.6.1",
+    "redux-promise": "^0.5.3",
+    "redux-thunk": "^2.1.0",
+    "whatwg-fetch": "^1.0.0"
   },
   "devDependencies": {
-    "babel": "^6.3.13",
-    "babel-core": "^6.3.17",
-    "babel-eslint": "^5.0.0",
-    "babel-loader": "^6.2.0",
-    "babel-preset-es2015": "^6.3.13",
-    "babel-preset-react": "^6.3.13",
-    "babel-preset-react-hmre": "^1.0.0",
-    "babel-preset-stage-0": "^6.3.13",
-    "css-loader": "^0.23.0",
-    "eslint": "^1.10.3",
-    "eslint-config-airbnb": "5.0.1",
-    "eslint-plugin-react": "^3.11.3",
-    "express": "^4.13.3",
-    "redux-devtools": "^3.0.0",
-    "redux-devtools-log-monitor": "^1.0.1",
-    "style-loader": "^0.13.0",
-    "webpack": "^1.12.1",
-    "webpack-dev-middleware": "^1.2.0",
-    "webpack-hot-middleware": "^2.4.1"
+    "babel": "^6.5.2",
+    "babel-core": "^6.9.1",
+    "babel-eslint": "^6.0.4",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-react": "^6.5.0",
+    "babel-preset-react-hmre": "^1.1.1",
+    "babel-preset-stage-0": "^6.5.0",
+    "css-loader": "^0.23.1",
+    "eslint": "^2.12.0",
+    "eslint-config-airbnb": "9.0.1",
+    "eslint-plugin-import": "^1.8.1",
+    "eslint-plugin-jsx-a11y": "^1.5.3",
+    "eslint-plugin-react": "^5.2.1",
+    "express": "^4.14.0",
+    "react-router-redux": "^4.0.5",
+    "redux-devtools": "^3.3.1",
+    "redux-devtools-log-monitor": "^1.0.11",
+    "style-loader": "^0.13.1",
+    "webpack": "^1.13.1",
+    "webpack-dev-middleware": "^1.6.1",
+    "webpack-hot-middleware": "^2.10.0"
   }
 }
